src/objects/Doctor_Mastery_Center_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Arches_Delivered__c</fullName>
        <label>Arches Delivered</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Battlegroup_Stars__c</fullName>
        <label>Battlegroup Stars</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Doctor Mastery Center Snapshots</relationshipLabel>
        <relationshipName>Doctor_Mastery_Center_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideal_Week_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ideal Week Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leadership_Impact_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership Impact Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Cultural_Inventory__c</fullName>
        <label>Organization Cultural Inventory</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surgical_Backlog_Days__c</fullName>
        <label>Surgical Backlog Days</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Doctor Mastery Center Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Mastery Center Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctor Mastery Center Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>